--- a/index.html
+++ b/index.html
@@ -1,233 +1,421 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>Modellvergleich</title>
+<meta charset="utf-8" />
+<title>3D Modellvergleich</title>
+
+<!-- model-viewer -->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 <style>
-    body {
-        margin: 0;
-        overflow: hidden;
-        background: #fff;
-        font-family: Arial;
-    }
+  :root {
+    --sidebar-width: 220px;
+    --accent: #0077ff;
+  }
 
-    /* Seitenlayout */
-    #sidebar {
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 160px;
-        background: #f2f2f2;
-        padding: 20px;
-        overflow-y: auto;
-        z-index: 10;
-    }
+  html,body{
+    height:100%;
+    margin:0;
+    font-family: Arial, sans-serif;
+    background: #f6f6f6;
+  }
 
-    #main-view {
-        position: fixed;
-        left: 160px;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        background: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+  /* SIDEBAR */
+  #sidebar{
+    position:fixed;
+    left:0;
+    top:0;
+    bottom:0;
+    width:var(--sidebar-width);
+    padding:20px;
+    box-sizing:border-box;
+    background:#1e1e1e;
+    color:white;
+    overflow:auto;
+    z-index:50;
+  }
 
-    #year-buttons button {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 10px;
-        font-size: 16px;
-        cursor: pointer;
-    }
+  #sidebar h2 { margin:0 0 12px 0; font-size:18px; }
+  .year-btn{
+    display:block;
+    width:100%;
+    padding:10px;
+    margin:8px 0;
+    background:#333;
+    color:white;
+    border:0;
+    border-radius:6px;
+    cursor:pointer;
+    text-align:left;
+    font-size:15px;
+  }
+  .year-btn:hover{ background:#444; }
 
-    #compare-trigger {
-        margin-top: 30px;
-        width: 100%;
-        padding: 10px;
-        background: #d33;
-        color: white;
-        border: none;
-        cursor: pointer;
-        font-size: 16px;
-    }
+  #compare-btn {
+    margin-top:18px;
+    display:block;
+    width:100%;
+    padding:12px;
+    background:var(--accent);
+    color:white;
+    border:0;
+    border-radius:8px;
+    cursor:pointer;
+    font-weight:600;
+    font-size:15px;
+  }
+  #compare-btn:hover{ filter:brightness(.95); }
 
-    /* Vergleichsmodus */
-    #compare-mode {
-        display: none;
-        position: fixed;
-        inset: 0;
-        background: white;
-        z-index: 999;
-    }
+  /* MAIN VIEW */
+  #main-area{
+    position:fixed;
+    left:var(--sidebar-width);
+    top:0;
+    right:0;
+    bottom:0;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    background:#eaeaea;
+  }
 
-    #back-button {
-        position: absolute;
-        top: 20px;
-        left: 20px;
-        padding: 10px 20px;
-        background: black;
-        color: white;
-        border: none;
-        font-size: 16px;
-        cursor: pointer;
-        z-index: 1000;
-    }
+  model-viewer#main-model{
+    width:80%;
+    height:80%;
+    --poster-color: transparent;
+  }
 
-    /* Modell-Container */
-    #compare-container {
-        position: absolute;
-        inset: 0;
-        overflow: hidden;
-    }
+  /* COMPARE MODE (OVERLAY) */
+  #compare-wrapper{
+    display:none; /* show when comparing */
+    position:fixed;
+    left:var(--sidebar-width);
+    top:0;
+    width:calc(100vw - var(--sidebar-width));
+    height:100vh;
+    background:white; /* requested white background */
+    z-index:1000;
+    overflow:hidden;
+  }
 
-    #modelA, #modelB {
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-    }
+  /* Back button top-left inside compare */
+  #compare-back {
+    position:absolute;
+    top:16px;
+    left:16px;
+    z-index:2000;
+    padding:10px 14px;
+    background:#000;
+    color:#fff;
+    border:0;
+    border-radius:6px;
+    cursor:pointer;
+  }
 
-    #modelA { clip-path: inset(0 50% 0 0); }
-    #modelB { clip-path: inset(0 0 0 50%); }
+  /* left/right selection lists (centered vertically) */
+  .side-list {
+    position:absolute;
+    top:50%;
+    transform:translateY(-50%);
+    display:flex;
+    flex-direction:column;
+    gap:10px;
+    z-index:2000; /* above viewers so clickable */
+    width:160px;
+  }
+  #left-list { left:20px; }
+  #right-list { right:20px; text-align:right; }
 
-    /* Slider */
-    #slider {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 4px;
-        background: red;
-        left: 50%;
-        cursor: ew-resize;
-        z-index: 1000;
-    }
+  .side-list button {
+    padding:8px 10px;
+    background:#222;
+    color:#fff;
+    border:0;
+    border-radius:6px;
+    cursor:pointer;
+  }
+  .side-list button:hover{ background:#444; }
 
-    /* Sync-Hover (kein Cursor-Symbol von model-viewer!) */
-    model-viewer::part(default-controls) {
-        display: none !important;
-    }
+  /* container that holds the two viewers stacked */
+  #compare-container{
+    position:absolute;
+    inset:0;
+    overflow:hidden;
+  }
+
+  /* both model-viewers cover full compare-container */
+  model-viewer.compare-model {
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    --poster-color: transparent;
+    /* allow user interaction (pointer) */
+    pointer-events:auto;
+  }
+
+  /* initial clipping: left shows left half, right shows right half */
+  #model-left { clip-path: inset(0 50% 0 0); }
+  #model-right { clip-path: inset(0 0 0 50%); }
+
+  /* slider (vertical) centered */
+  #compare-slider {
+    position:absolute;
+    top:0;
+    height:100%;
+    width:6px;
+    background:#ff3b3b;
+    left:50%;
+    transform:translateX(-3px);
+    cursor:ew-resize;
+    z-index:1500;
+    border-radius:3px;
+  }
+
+  /* hide model-viewer default UI parts that show interaction badges */
+  model-viewer::part(default-controls){
+    display:none !important;
+  }
 </style>
 </head>
 <body>
 
-<!-- Seitenleiste -->
-<div id="sidebar">
-    <div id="year-buttons"></div>
-    <button id="compare-trigger">Vergleichen</button>
-</div>
+  <!-- Sidebar -->
+  <div id="sidebar">
+    <h2>Modelle</h2>
+    <div id="year-list"></div>
 
-<!-- Hauptmodellanzeige -->
-<div id="main-view">
-    <model-viewer id="main-model" camera-controls touch-action="none" disable-zoom></model-viewer>
-</div>
+    <button id="compare-btn">Vergleichen</button>
+  </div>
 
-<!-- Vergleichsmodus -->
-<div id="compare-mode">
-    <button id="back-button">← Zurück</button>
+  <!-- Main area -->
+  <div id="main-area">
+    <model-viewer id="main-model"
+      camera-controls
+      interaction-prompt="none"
+      interaction-prompt-threshold="0"
+      alt="Hauptmodell">
+    </model-viewer>
+  </div>
+
+  <!-- Compare overlay -->
+  <div id="compare-wrapper" aria-hidden="true">
+    <button id="compare-back">← Zurück</button>
+
+    <div id="left-list" class="side-list"></div>
+    <div id="right-list" class="side-list"></div>
 
     <div id="compare-container">
-        <model-viewer id="modelA" camera-controls touch-action="none" disable-zoom></model-viewer>
-        <model-viewer id="modelB" camera-controls touch-action="none" disable-zoom></model-viewer>
+      <model-viewer id="model-left" class="compare-model"
+        camera-controls
+        interaction-prompt="none"
+        interaction-prompt-threshold="0"
+        alt="linkes Modell">
+      </model-viewer>
+
+      <model-viewer id="model-right" class="compare-model"
+        camera-controls
+        interaction-prompt="none"
+        interaction-prompt-threshold="0"
+        alt="rechtes Modell">
+      </model-viewer>
     </div>
 
-    <div id="slider"></div>
-</div>
+    <div id="compare-slider" role="separator" aria-orientation="vertical"></div>
+  </div>
 
 <script>
-/* ------------------------------
-   MODELLE DEFINIEREN
------------------------------- */
-const models = {
-    "2003": "facelift_orange_2003.glb",
-    "2006": "facelift_orange_2006.glb",
-    "2009": "facelift_orange_2009.glb",
-    "2013": "facelift_orange_2013.glb",
-    "2016": "facelift_orange_2016.glb",
-    "2020": "facelift_orange_2020.glb"
-};
+/* ===========================
+   Models (use your filenames)
+   =========================== */
+const MODEL_LIST = [
+  "1150.glb",
+  "1175.glb",
+  "1374.glb",
+  "1550.glb",
+  "1630.glb",
+  "1936.glb"
+];
 
-/* ------------------------------
-   JAHRE ALS BUTTONS LADEN
------------------------------- */
-const yearButtons = document.getElementById("year-buttons");
-const mainModel = document.getElementById("main-model");
-
-for (const year in models) {
-    const btn = document.createElement("button");
-    btn.innerText = year;
-    btn.onclick = () => {
-        mainModel.src = models[year];
-    };
-    yearButtons.appendChild(btn);
-}
-
-/* Erster Load */
-mainModel.src = models["2003"];
-
-/* ------------------------------
-   VERGLEICHSMODUS
------------------------------- */
-const compareMode = document.getElementById("compare-mode");
-const backButton = document.getElementById("back-button");
-const slider = document.getElementById("slider");
-
-const modelA = document.getElementById("modelA");
-const modelB = document.getElementById("modelB");
-
-/* Vergleich starten */
-document.getElementById("compare-trigger").onclick = () => {
-    compareMode.style.display = "block";
-
-    modelA.src = models["2003"];
-    modelB.src = models["2020"];
-};
-
-/* Vergleich beenden */
-backButton.onclick = () => {
-    compareMode.style.display = "none";
-};
-
-/* ------------------------------
-   SLIDER LOGIK
------------------------------- */
-let sliding = false;
-
-slider.addEventListener("mousedown", () => sliding = true);
-window.addEventListener("mouseup", () => sliding = false);
-window.addEventListener("mousemove", e => {
-    if (!sliding) return;
-
-    let x = e.clientX / window.innerWidth;
-
-    x = Math.min(0.95, Math.max(0.05, x));
-
-    slider.style.left = (x * 100) + "%";
-
-    modelA.style.clipPath = `inset(0 ${(1 - x) * 100}% 0 0)`;
-    modelB.style.clipPath = `inset(0 0 0 ${x * 100}%)`;
+/* ---------- Populate sidebar years ---------- */
+const yearList = document.getElementById('year-list');
+MODEL_LIST.forEach(fn => {
+  const name = fn.replace(/\.glb$/i, '');
+  const b = document.createElement('button');
+  b.className = 'year-btn';
+  b.textContent = name;
+  b.onclick = () => {
+    document.getElementById('main-model').src = fn;
+  };
+  yearList.appendChild(b);
 });
 
-/* ------------------------------
-   SYNCHRONISIERTE STEUERUNG
------------------------------- */
-function sync(a, b) {
-    a.addEventListener("camera-change", () => {
-        b.cameraOrbit = a.cameraOrbit;
-        b.cameraTarget = a.cameraTarget;
-        b.fieldOfView = a.fieldOfView;
-    });
+/* show first model immediately */
+document.getElementById('main-model').src = MODEL_LIST[0];
+
+/* ---------- compare elements ---------- */
+const compareBtn = document.getElementById('compare-btn');
+const compareWrapper = document.getElementById('compare-wrapper');
+const compareBack = document.getElementById('compare-back');
+const leftList = document.getElementById('left-list');
+const rightList = document.getElementById('right-list');
+const modelLeft = document.getElementById('model-left');
+const modelRight = document.getElementById('model-right');
+const slider = document.getElementById('compare-slider');
+const compareContainer = document.getElementById('compare-container');
+
+/* Fill left/right lists with year buttons (centered vertically by CSS) */
+function buildCompareLists() {
+  leftList.innerHTML = '';
+  rightList.innerHTML = '';
+  MODEL_LIST.forEach(fn => {
+    const name = fn.replace(/\.glb$/i, '');
+    const bl = document.createElement('button');
+    bl.textContent = name;
+    bl.onclick = () => { modelLeft.src = fn; };
+    leftList.appendChild(bl);
+
+    const br = document.createElement('button');
+    br.textContent = name;
+    br.onclick = () => { modelRight.src = fn; };
+    rightList.appendChild(br);
+  });
 }
 
-sync(modelA, modelB);
-sync(modelB, modelA);
+/* ---------- open/close compare mode ---------- */
+compareBtn.addEventListener('click', () => {
+  // set compare visible
+  compareWrapper.style.display = 'block';
+  compareWrapper.setAttribute('aria-hidden', 'false');
 
+  // populate lists
+  buildCompareLists();
+
+  // set default models (left=first, right=last) if not set
+  if (!modelLeft.src) modelLeft.src = MODEL_LIST[0];
+  if (!modelRight.src) modelRight.src = MODEL_LIST[MODEL_LIST.length - 1];
+
+  // position slider centered
+  requestAnimationFrame(() => {
+    positionSliderAtPercent(0.5);
+  });
+});
+
+compareBack.addEventListener('click', () => {
+  compareWrapper.style.display = 'none';
+  compareWrapper.setAttribute('aria-hidden', 'true');
+});
+
+/* ---------- calculate and set clip-paths relative to compare container ---------- */
+function positionSliderAtPercent(pct) {
+  // pct between 0..1 relative to compare-container width
+  const rect = compareContainer.getBoundingClientRect();
+  const width = rect.width;
+  const x = Math.min(Math.max(pct, 0.02), 0.98) * width;
+
+  // place slider (absolute left from compare-wrapper)
+  const wrapperRect = compareWrapper.getBoundingClientRect();
+  const leftOffset = rect.left - wrapperRect.left; // usually 0
+  slider.style.left = (leftOffset + x) + 'px';
+
+  // compute clip for left (hide right side from x..end)
+  modelLeft.style.clipPath = `inset(0 ${Math.round(width - x)}px 0 0)`;
+  // compute clip for right (hide left side up to x)
+  modelRight.style.clipPath = `inset(0 0 0 ${Math.round(x)}px)`;
+}
+
+/* ---------- MAKE SLIDER DRAGGABLE (mouse + touch) ---------- */
+let dragging = false;
+
+slider.addEventListener('mousedown', (ev) => {
+  ev.preventDefault();
+  dragging = true;
+});
+window.addEventListener('mouseup', () => dragging = false);
+window.addEventListener('mouseleave', () => dragging = false);
+
+window.addEventListener('mousemove', (ev) => {
+  if (!dragging) return;
+  updateSliderFromClientX(ev.clientX);
+});
+
+// Touch support
+slider.addEventListener('touchstart', (ev) => { ev.preventDefault(); dragging = true; });
+window.addEventListener('touchend', () => dragging = false);
+window.addEventListener('touchcancel', () => dragging = false);
+window.addEventListener('touchmove', (ev) => {
+  if (!dragging) return;
+  updateSliderFromClientX(ev.touches[0].clientX);
+});
+
+function updateSliderFromClientX(clientX) {
+  const rect = compareContainer.getBoundingClientRect();
+  // clamp to container
+  const leftBoundary = rect.left + 20; // small padding
+  const rightBoundary = rect.right - 20;
+  const clampedX = Math.min(Math.max(clientX, leftBoundary), rightBoundary);
+  const pct = (clampedX - rect.left) / rect.width;
+  positionSliderAtPercent(pct);
+}
+
+/* ---------- camera sync (bidirectional, without loop) ---------- */
+let syncing = false;
+
+function syncCamera(source, target) {
+  if (syncing) return;
+  syncing = true;
+  try {
+    // model-viewer exposes cameraOrbit, cameraTarget and fieldOfView properties
+    target.cameraOrbit = source.cameraOrbit;
+    target.cameraTarget = source.cameraTarget;
+    target.fieldOfView = source.fieldOfView;
+  } catch (e) {
+    // ignore if not ready yet
+  } finally {
+    // tiny delay to avoid recursive loop issues
+    setTimeout(() => { syncing = false; }, 0);
+  }
+}
+
+modelLeft.addEventListener('camera-change', () => syncCamera(modelLeft, modelRight));
+modelRight.addEventListener('camera-change', () => syncCamera(modelRight, modelLeft));
+
+/* Ensure nothing auto-rotates or auto-animates on load:
+   We do not set auto-rotate attributes anywhere, and interaction prompt removed via attributes and CSS.
+   Optionally set a fixed initial cameraOrbit for both to avoid initial movement: */
+function setInitialOrbits() {
+  // choose a comfortable starting orbit (azimuth elevation radius). Adjust if needed.
+  // format: "<azimuth>deg <elevation>deg <radius>"
+  const initial = '0deg 75deg 2.5m';
+  try {
+    modelLeft.cameraOrbit = initial;
+    modelRight.cameraOrbit = initial;
+    modelLeft.cameraTarget = '0m 0m 0m';
+    modelRight.cameraTarget = '0m 0m 0m';
+  } catch (e) {}
+}
+
+// set initial orbits once viewers are ready
+modelLeft.addEventListener('load', setInitialOrbits);
+modelRight.addEventListener('load', setInitialOrbits);
+
+/* Make sure clicks on side buttons are above model viewers (z-index already set in CSS).
+   Also ensure keyboard ESC closes compare mode */
+window.addEventListener('keydown', (e) => {
+  if (e.key === 'Escape' && compareWrapper.style.display === 'block') {
+    compareWrapper.style.display = 'none';
+  }
+});
+
+/* On window resize keep slider centered relative to new size */
+window.addEventListener('resize', () => {
+  // keep same visual center by recalculating based on current slider left
+  const rect = compareContainer.getBoundingClientRect();
+  const sliderRect = slider.getBoundingClientRect();
+  const x = sliderRect.left - rect.left;
+  const pct = rect.width ? (x / rect.width) : 0.5;
+  positionSliderAtPercent(pct);
+});
 </script>
 </body>
 </html>
